--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -55,7 +55,7 @@
                                                                         }
                                                                     </script>
                                                                     <script src="a.ob.js"></script>
-                                                                    <link rel="stylesheet" href="leaflet/leaflet.css" />
+                                                                    <link rel="stylesheet" href="/leaflet/leaflet.css" />
                                                                     <style>
                                                                         html, body {
                                                                             margin: 0;
@@ -760,8 +760,8 @@
 <script src="chart.js"></script>
 <script src="chartjs-plugin-annotation@1.4.0"></script>
 <script src="l.ob.js"></script>
-<script src="leaflet/leaflet.js"></script>
-<script src="leaflet/Leaflet.greatCircle.js"></script>
+<script src="/leaflet/leaflet.js"></script>
+<script src="/leaflet/Leaflet.greatCircle.js"></script>
 <script>
     let chart;
     let dxChart;
