--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -1149,7 +1149,7 @@
                                                     // Add moon marker
                                                     moonMarker = L.marker([lat, lon], {
                                                         icon: L.icon({
-                                                            iconUrl: 'images/moon.png', // Ensure this path is correct
+                                                            iconUrl: 'images/moon-icon.png', // Ensure this path is correct
                                                             iconSize: [20, 20],
                                                             iconAnchor: [10, 10]
                                                         }),
